# fvp

./: CLAUDE.md  README.md  fvp.py  fvp_tui.py  pyproject.toml
src/fvp/: __init__.py  cli.py  core.py  models.py  storage.py  tui.py
