[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fvp"
version = "1.0.0"
description = "Final Version Perfected (FVP) task management CLI and TUI"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Console :: Curses",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]
keywords = ["productivity", "tasks", "todo", "fvp", "mark-forster"]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "mypy>=1.0",
]

[project.scripts]
fvp = "fvp.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/fvp"]
